dsl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Dimensional_Model
Rule 1     Dimensional_Model -> List_Dimensional_Tables
Rule 2     List_Dimensional_Tables -> Dimensional_Table
Rule 3     List_Attr_Def -> Attr_Def
Rule 4     List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table
Rule 5     Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE
Rule 6     Dimensional_Table -> FACT ID LBRACE List_Attr_Def RBRACE
Rule 7     List_Attr_Def -> List_Attr_Def Attr_Def
Rule 8     Attr_Def -> Attr_Expression Type Alias
Rule 9     Attr_Expression -> T X
Rule 10    X -> PLUS T X
Rule 11    X -> MINUS T X
Rule 12    X -> empty_list
Rule 13    T -> F Y
Rule 14    Y -> TIMES F Y
Rule 15    Y -> DIVIDE F Y
Rule 16    Y -> empty_list
Rule 17    F -> Attr
Rule 18    F -> NUMBER
Rule 19    F -> LPAREN Attr_Expression RPAREN
Rule 20    Attr -> Table TWODOTS ID Modifier
Rule 21    Attr -> Table TWODOTS Func LPAREN ID RPAREN
Rule 22    Attr -> Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
Rule 23    Attr -> Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
Rule 24    Attr -> Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
Rule 25    Table -> ID
Rule 26    Table -> SELF
Rule 27    Func -> WEEKDAY
Rule 28    Func -> MONTHSTR
Rule 29    Alias -> AS ID
Rule 30    Alias -> empty
Rule 31    Type -> INT
Rule 32    Type -> STR
Rule 33    Type -> DATE
Rule 34    Type -> DATETIME
Rule 35    Type -> empty
Rule 36    Modifier -> PK
Rule 37    Modifier -> FK
Rule 38    Modifier -> empty
Rule 39    empty -> <empty>
Rule 40    empty_list -> <empty>

Terminals, with rules where they appear

AS                   : 29
AVG                  : 23
COUNT                : 24
DATE                 : 33
DATETIME             : 34
DIM                  : 5
DIVIDE               : 15
FACT                 : 6
FK                   : 37
GROUP                : 22 23 24
ID                   : 5 6 20 21 22 22 23 23 24 24 25 29
INT                  : 31
LBRACE               : 5 6
LPAREN               : 19 21 22 23 24
MINUS                : 11
MONTHSTR             : 28
NUMBER               : 18
PK                   : 36
PLUS                 : 10
RBRACE               : 5 6
RPAREN               : 19 21 22 23 24
SELF                 : 26
STR                  : 32
SUM                  : 22
TIMES                : 14
TWODOTS              : 20 21 22 22 23 23 24 24
WEEKDAY              : 27
error                : 

Nonterminals, with rules where they appear

Alias                : 8
Attr                 : 17
Attr_Def             : 3 7
Attr_Expression      : 8 19
Dimensional_Model    : 0
Dimensional_Table    : 2 4
F                    : 13 14 15
Func                 : 21
List_Attr_Def        : 5 6 7
List_Dimensional_Tables : 1 4
Modifier             : 20
T                    : 9 10 11
Table                : 20 21 22 22 23 23 24 24
Type                 : 8
X                    : 9 10 11
Y                    : 13 14 15
empty                : 30 35 38
empty_list           : 12 16

Parsing method: LALR

state 0

    (0) S' -> . Dimensional_Model
    (1) Dimensional_Model -> . List_Dimensional_Tables
    (2) List_Dimensional_Tables -> . Dimensional_Table
    (4) List_Dimensional_Tables -> . List_Dimensional_Tables Dimensional_Table
    (5) Dimensional_Table -> . DIM ID LBRACE List_Attr_Def RBRACE
    (6) Dimensional_Table -> . FACT ID LBRACE List_Attr_Def RBRACE

    DIM             shift and go to state 4
    FACT            shift and go to state 5

    Dimensional_Model              shift and go to state 1
    List_Dimensional_Tables        shift and go to state 2
    Dimensional_Table              shift and go to state 3

state 1

    (0) S' -> Dimensional_Model .



state 2

    (1) Dimensional_Model -> List_Dimensional_Tables .
    (4) List_Dimensional_Tables -> List_Dimensional_Tables . Dimensional_Table
    (5) Dimensional_Table -> . DIM ID LBRACE List_Attr_Def RBRACE
    (6) Dimensional_Table -> . FACT ID LBRACE List_Attr_Def RBRACE

    $end            reduce using rule 1 (Dimensional_Model -> List_Dimensional_Tables .)
    DIM             shift and go to state 4
    FACT            shift and go to state 5

    Dimensional_Table              shift and go to state 6

state 3

    (2) List_Dimensional_Tables -> Dimensional_Table .

    DIM             reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)
    FACT            reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)
    $end            reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)


state 4

    (5) Dimensional_Table -> DIM . ID LBRACE List_Attr_Def RBRACE

    ID              shift and go to state 7


state 5

    (6) Dimensional_Table -> FACT . ID LBRACE List_Attr_Def RBRACE

    ID              shift and go to state 8


state 6

    (4) List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .

    DIM             reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)
    FACT            reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)
    $end            reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)


state 7

    (5) Dimensional_Table -> DIM ID . LBRACE List_Attr_Def RBRACE

    LBRACE          shift and go to state 9


state 8

    (6) Dimensional_Table -> FACT ID . LBRACE List_Attr_Def RBRACE

    LBRACE          shift and go to state 10


state 9

    (5) Dimensional_Table -> DIM ID LBRACE . List_Attr_Def RBRACE
    (3) List_Attr_Def -> . Attr_Def
    (7) List_Attr_Def -> . List_Attr_Def Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    List_Attr_Def                  shift and go to state 12
    Attr_Def                       shift and go to state 13
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 10

    (6) Dimensional_Table -> FACT ID LBRACE . List_Attr_Def RBRACE
    (3) List_Attr_Def -> . Attr_Def
    (7) List_Attr_Def -> . List_Attr_Def Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    List_Attr_Def                  shift and go to state 22
    Attr_Def                       shift and go to state 13
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 11

    (25) Table -> ID .

    TWODOTS         reduce using rule 25 (Table -> ID .)


state 12

    (5) Dimensional_Table -> DIM ID LBRACE List_Attr_Def . RBRACE
    (7) List_Attr_Def -> List_Attr_Def . Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    RBRACE          shift and go to state 23
    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Def                       shift and go to state 24
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 13

    (3) List_Attr_Def -> Attr_Def .

    RBRACE          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    NUMBER          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    LPAREN          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    ID              reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    SELF            reduce using rule 3 (List_Attr_Def -> Attr_Def .)


state 14

    (8) Attr_Def -> Attr_Expression . Type Alias
    (31) Type -> . INT
    (32) Type -> . STR
    (33) Type -> . DATE
    (34) Type -> . DATETIME
    (35) Type -> . empty
    (39) empty -> .

    INT             shift and go to state 26
    STR             shift and go to state 27
    DATE            shift and go to state 28
    DATETIME        shift and go to state 29
    AS              reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)
    NUMBER          reduce using rule 39 (empty -> .)
    LPAREN          reduce using rule 39 (empty -> .)
    ID              reduce using rule 39 (empty -> .)
    SELF            reduce using rule 39 (empty -> .)

    Type                           shift and go to state 25
    empty                          shift and go to state 30

state 15

    (9) Attr_Expression -> T . X
    (10) X -> . PLUS T X
    (11) X -> . MINUS T X
    (12) X -> . empty_list
    (40) empty_list -> .

    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    INT             reduce using rule 40 (empty_list -> .)
    STR             reduce using rule 40 (empty_list -> .)
    DATE            reduce using rule 40 (empty_list -> .)
    DATETIME        reduce using rule 40 (empty_list -> .)
    AS              reduce using rule 40 (empty_list -> .)
    RBRACE          reduce using rule 40 (empty_list -> .)
    NUMBER          reduce using rule 40 (empty_list -> .)
    LPAREN          reduce using rule 40 (empty_list -> .)
    ID              reduce using rule 40 (empty_list -> .)
    SELF            reduce using rule 40 (empty_list -> .)
    RPAREN          reduce using rule 40 (empty_list -> .)

    X                              shift and go to state 31
    empty_list                     shift and go to state 34

state 16

    (13) T -> F . Y
    (14) Y -> . TIMES F Y
    (15) Y -> . DIVIDE F Y
    (16) Y -> . empty_list
    (40) empty_list -> .

    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    PLUS            reduce using rule 40 (empty_list -> .)
    MINUS           reduce using rule 40 (empty_list -> .)
    INT             reduce using rule 40 (empty_list -> .)
    STR             reduce using rule 40 (empty_list -> .)
    DATE            reduce using rule 40 (empty_list -> .)
    DATETIME        reduce using rule 40 (empty_list -> .)
    AS              reduce using rule 40 (empty_list -> .)
    RBRACE          reduce using rule 40 (empty_list -> .)
    NUMBER          reduce using rule 40 (empty_list -> .)
    LPAREN          reduce using rule 40 (empty_list -> .)
    ID              reduce using rule 40 (empty_list -> .)
    SELF            reduce using rule 40 (empty_list -> .)
    RPAREN          reduce using rule 40 (empty_list -> .)

    Y                              shift and go to state 35
    empty_list                     shift and go to state 38

state 17

    (17) F -> Attr .

    TIMES           reduce using rule 17 (F -> Attr .)
    DIVIDE          reduce using rule 17 (F -> Attr .)
    PLUS            reduce using rule 17 (F -> Attr .)
    MINUS           reduce using rule 17 (F -> Attr .)
    INT             reduce using rule 17 (F -> Attr .)
    STR             reduce using rule 17 (F -> Attr .)
    DATE            reduce using rule 17 (F -> Attr .)
    DATETIME        reduce using rule 17 (F -> Attr .)
    AS              reduce using rule 17 (F -> Attr .)
    RBRACE          reduce using rule 17 (F -> Attr .)
    NUMBER          reduce using rule 17 (F -> Attr .)
    LPAREN          reduce using rule 17 (F -> Attr .)
    ID              reduce using rule 17 (F -> Attr .)
    SELF            reduce using rule 17 (F -> Attr .)
    RPAREN          reduce using rule 17 (F -> Attr .)


state 18

    (18) F -> NUMBER .

    TIMES           reduce using rule 18 (F -> NUMBER .)
    DIVIDE          reduce using rule 18 (F -> NUMBER .)
    PLUS            reduce using rule 18 (F -> NUMBER .)
    MINUS           reduce using rule 18 (F -> NUMBER .)
    INT             reduce using rule 18 (F -> NUMBER .)
    STR             reduce using rule 18 (F -> NUMBER .)
    DATE            reduce using rule 18 (F -> NUMBER .)
    DATETIME        reduce using rule 18 (F -> NUMBER .)
    AS              reduce using rule 18 (F -> NUMBER .)
    RBRACE          reduce using rule 18 (F -> NUMBER .)
    NUMBER          reduce using rule 18 (F -> NUMBER .)
    LPAREN          reduce using rule 18 (F -> NUMBER .)
    ID              reduce using rule 18 (F -> NUMBER .)
    SELF            reduce using rule 18 (F -> NUMBER .)
    RPAREN          reduce using rule 18 (F -> NUMBER .)


state 19

    (19) F -> LPAREN . Attr_Expression RPAREN
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Expression                shift and go to state 39
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 20

    (20) Attr -> Table . TWODOTS ID Modifier
    (21) Attr -> Table . TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> Table . TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> Table . TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> Table . TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID

    TWODOTS         shift and go to state 40


state 21

    (26) Table -> SELF .

    TWODOTS         reduce using rule 26 (Table -> SELF .)


state 22

    (6) Dimensional_Table -> FACT ID LBRACE List_Attr_Def . RBRACE
    (7) List_Attr_Def -> List_Attr_Def . Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    RBRACE          shift and go to state 41
    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Def                       shift and go to state 24
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 23

    (5) Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .

    DIM             reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)
    FACT            reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)
    $end            reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)


state 24

    (7) List_Attr_Def -> List_Attr_Def Attr_Def .

    RBRACE          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    NUMBER          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    LPAREN          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    ID              reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    SELF            reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)


state 25

    (8) Attr_Def -> Attr_Expression Type . Alias
    (29) Alias -> . AS ID
    (30) Alias -> . empty
    (39) empty -> .

    AS              shift and go to state 43
    RBRACE          reduce using rule 39 (empty -> .)
    NUMBER          reduce using rule 39 (empty -> .)
    LPAREN          reduce using rule 39 (empty -> .)
    ID              reduce using rule 39 (empty -> .)
    SELF            reduce using rule 39 (empty -> .)

    Alias                          shift and go to state 42
    empty                          shift and go to state 44

state 26

    (31) Type -> INT .

    AS              reduce using rule 31 (Type -> INT .)
    RBRACE          reduce using rule 31 (Type -> INT .)
    NUMBER          reduce using rule 31 (Type -> INT .)
    LPAREN          reduce using rule 31 (Type -> INT .)
    ID              reduce using rule 31 (Type -> INT .)
    SELF            reduce using rule 31 (Type -> INT .)


state 27

    (32) Type -> STR .

    AS              reduce using rule 32 (Type -> STR .)
    RBRACE          reduce using rule 32 (Type -> STR .)
    NUMBER          reduce using rule 32 (Type -> STR .)
    LPAREN          reduce using rule 32 (Type -> STR .)
    ID              reduce using rule 32 (Type -> STR .)
    SELF            reduce using rule 32 (Type -> STR .)


state 28

    (33) Type -> DATE .

    AS              reduce using rule 33 (Type -> DATE .)
    RBRACE          reduce using rule 33 (Type -> DATE .)
    NUMBER          reduce using rule 33 (Type -> DATE .)
    LPAREN          reduce using rule 33 (Type -> DATE .)
    ID              reduce using rule 33 (Type -> DATE .)
    SELF            reduce using rule 33 (Type -> DATE .)


state 29

    (34) Type -> DATETIME .

    AS              reduce using rule 34 (Type -> DATETIME .)
    RBRACE          reduce using rule 34 (Type -> DATETIME .)
    NUMBER          reduce using rule 34 (Type -> DATETIME .)
    LPAREN          reduce using rule 34 (Type -> DATETIME .)
    ID              reduce using rule 34 (Type -> DATETIME .)
    SELF            reduce using rule 34 (Type -> DATETIME .)


state 30

    (35) Type -> empty .

    AS              reduce using rule 35 (Type -> empty .)
    RBRACE          reduce using rule 35 (Type -> empty .)
    NUMBER          reduce using rule 35 (Type -> empty .)
    LPAREN          reduce using rule 35 (Type -> empty .)
    ID              reduce using rule 35 (Type -> empty .)
    SELF            reduce using rule 35 (Type -> empty .)


state 31

    (9) Attr_Expression -> T X .

    INT             reduce using rule 9 (Attr_Expression -> T X .)
    STR             reduce using rule 9 (Attr_Expression -> T X .)
    DATE            reduce using rule 9 (Attr_Expression -> T X .)
    DATETIME        reduce using rule 9 (Attr_Expression -> T X .)
    AS              reduce using rule 9 (Attr_Expression -> T X .)
    RBRACE          reduce using rule 9 (Attr_Expression -> T X .)
    NUMBER          reduce using rule 9 (Attr_Expression -> T X .)
    LPAREN          reduce using rule 9 (Attr_Expression -> T X .)
    ID              reduce using rule 9 (Attr_Expression -> T X .)
    SELF            reduce using rule 9 (Attr_Expression -> T X .)
    RPAREN          reduce using rule 9 (Attr_Expression -> T X .)


state 32

    (10) X -> PLUS . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    T                              shift and go to state 45
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 33

    (11) X -> MINUS . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    T                              shift and go to state 46
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 34

    (12) X -> empty_list .

    INT             reduce using rule 12 (X -> empty_list .)
    STR             reduce using rule 12 (X -> empty_list .)
    DATE            reduce using rule 12 (X -> empty_list .)
    DATETIME        reduce using rule 12 (X -> empty_list .)
    AS              reduce using rule 12 (X -> empty_list .)
    RBRACE          reduce using rule 12 (X -> empty_list .)
    NUMBER          reduce using rule 12 (X -> empty_list .)
    LPAREN          reduce using rule 12 (X -> empty_list .)
    ID              reduce using rule 12 (X -> empty_list .)
    SELF            reduce using rule 12 (X -> empty_list .)
    RPAREN          reduce using rule 12 (X -> empty_list .)


state 35

    (13) T -> F Y .

    PLUS            reduce using rule 13 (T -> F Y .)
    MINUS           reduce using rule 13 (T -> F Y .)
    INT             reduce using rule 13 (T -> F Y .)
    STR             reduce using rule 13 (T -> F Y .)
    DATE            reduce using rule 13 (T -> F Y .)
    DATETIME        reduce using rule 13 (T -> F Y .)
    AS              reduce using rule 13 (T -> F Y .)
    RBRACE          reduce using rule 13 (T -> F Y .)
    NUMBER          reduce using rule 13 (T -> F Y .)
    LPAREN          reduce using rule 13 (T -> F Y .)
    ID              reduce using rule 13 (T -> F Y .)
    SELF            reduce using rule 13 (T -> F Y .)
    RPAREN          reduce using rule 13 (T -> F Y .)


state 36

    (14) Y -> TIMES . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    F                              shift and go to state 47
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 37

    (15) Y -> DIVIDE . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (25) Table -> . ID
    (26) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    F                              shift and go to state 48
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 38

    (16) Y -> empty_list .

    PLUS            reduce using rule 16 (Y -> empty_list .)
    MINUS           reduce using rule 16 (Y -> empty_list .)
    INT             reduce using rule 16 (Y -> empty_list .)
    STR             reduce using rule 16 (Y -> empty_list .)
    DATE            reduce using rule 16 (Y -> empty_list .)
    DATETIME        reduce using rule 16 (Y -> empty_list .)
    AS              reduce using rule 16 (Y -> empty_list .)
    RBRACE          reduce using rule 16 (Y -> empty_list .)
    NUMBER          reduce using rule 16 (Y -> empty_list .)
    LPAREN          reduce using rule 16 (Y -> empty_list .)
    ID              reduce using rule 16 (Y -> empty_list .)
    SELF            reduce using rule 16 (Y -> empty_list .)
    RPAREN          reduce using rule 16 (Y -> empty_list .)


state 39

    (19) F -> LPAREN Attr_Expression . RPAREN

    RPAREN          shift and go to state 49


state 40

    (20) Attr -> Table TWODOTS . ID Modifier
    (21) Attr -> Table TWODOTS . Func LPAREN ID RPAREN
    (22) Attr -> Table TWODOTS . SUM LPAREN ID RPAREN GROUP Table TWODOTS ID
    (23) Attr -> Table TWODOTS . AVG LPAREN ID RPAREN GROUP Table TWODOTS ID
    (24) Attr -> Table TWODOTS . COUNT LPAREN ID RPAREN GROUP Table TWODOTS ID
    (27) Func -> . WEEKDAY
    (28) Func -> . MONTHSTR

    ID              shift and go to state 50
    SUM             shift and go to state 52
    AVG             shift and go to state 53
    COUNT           shift and go to state 54
    WEEKDAY         shift and go to state 55
    MONTHSTR        shift and go to state 56

    Func                           shift and go to state 51

state 41

    (6) Dimensional_Table -> FACT ID LBRACE List_Attr_Def RBRACE .
